--- a/CustomGallery-iOS/Base.lproj/Main.storyboard
+++ b/CustomGallery-iOS/Base.lproj/Main.storyboard
@@ -5,7 +5,7 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
     </dependencies>
     <scenes>
-        <!--Main Screen-->
+        <!--My Photos-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController automaticallyAdjustsScrollViewInsets="NO" id="BYZ-38-t0r" customClass="CGViewController" sceneMemberID="viewController">
@@ -26,7 +26,7 @@
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell" id="0dN-HE-fF5">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="kPhotoCellIdentifier" id="0dN-HE-fF5" customClass="CGPhotoCell">
                                         <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -41,10 +41,15 @@
                                         </view>
                                         <size key="customSize" width="90" height="90"/>
                                         <connections>
-                                            <segue destination="YOf-Si-Ox4" kind="show" id="Rlx-9J-BkD"/>
+                                            <outlet property="photoThumb" destination="av7-Yb-cyB" id="rfI-FC-WXG"/>
+                                            <segue destination="YOf-Si-Ox4" kind="show" identifier="toPhotoPresentationVC" id="Rlx-9J-BkD"/>
                                         </connections>
                                     </collectionViewCell>
                                 </cells>
+                                <connections>
+                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="QTs-MO-5qU"/>
+                                    <outlet property="delegate" destination="BYZ-38-t0r" id="Sw4-JH-goN"/>
+                                </connections>
                             </collectionView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="K6c-5w-xJ4">
                                 <rect key="frame" x="0.0" y="64" width="600" height="29"/>
@@ -65,7 +70,10 @@
                             <constraint firstAttribute="trailing" secondItem="K6c-5w-xJ4" secondAttribute="trailing" id="uZs-mz-d1P"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Main Screen" id="80M-n0-suE"/>
+                    <navigationItem key="navigationItem" title="My Photos" id="80M-n0-suE"/>
+                    <connections>
+                        <outlet property="collectionView" destination="Vue-lf-DPd" id="ODq-uC-MiC"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
