--- a/CustomGallery-iOS/Base.lproj/Main.storyboard
+++ b/CustomGallery-iOS/Base.lproj/Main.storyboard
@@ -3,6 +3,8 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--My Photos-->
@@ -14,32 +16,39 @@
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Vue-lf-DPd">
-                                <rect key="frame" x="0.0" y="92" width="600" height="508"/>
+                                <rect key="frame" x="0.0" y="92" width="320" height="476"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="Gwj-Dy-6MN">
-                                    <size key="itemSize" width="90" height="90"/>
+                                    <size key="itemSize" width="100" height="100"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="kPhotoCellIdentifier" id="0dN-HE-fF5" customClass="CGPhotoCell">
-                                        <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                                            <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="av7-Yb-cyB">
-                                                    <rect key="frame" x="0.0" y="0.0" width="90" height="90"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="av7-Yb-cyB">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" secondItem="av7-Yb-cyB" secondAttribute="height" multiplier="1:1" id="xjW-QW-Jr6"/>
+                                                    </constraints>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
-                                        <size key="customSize" width="90" height="90"/>
+                                        <constraints>
+                                            <constraint firstItem="av7-Yb-cyB" firstAttribute="top" secondItem="0dN-HE-fF5" secondAttribute="top" id="aBk-Cn-TjU"/>
+                                            <constraint firstAttribute="bottomMargin" secondItem="av7-Yb-cyB" secondAttribute="bottom" constant="-8" id="ka8-Rf-bMI"/>
+                                            <constraint firstItem="av7-Yb-cyB" firstAttribute="leading" secondItem="0dN-HE-fF5" secondAttribute="leading" id="neO-cJ-8nU"/>
+                                        </constraints>
                                         <connections>
                                             <outlet property="photoThumb" destination="av7-Yb-cyB" id="rfI-FC-WXG"/>
                                             <segue destination="YOf-Si-Ox4" kind="show" identifier="toPhotoPresentationVC" id="Rlx-9J-BkD"/>
@@ -52,7 +61,7 @@
                                 </connections>
                             </collectionView>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="K6c-5w-xJ4">
-                                <rect key="frame" x="0.0" y="64" width="600" height="29"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="29"/>
                                 <segments>
                                     <segment title="First"/>
                                     <segment title="Second"/>
@@ -77,36 +86,61 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1377" y="460"/>
+            <point key="canvasLocation" x="1192" y="453"/>
         </scene>
-        <!--View Controller-->
+        <!--Asset View Controller-->
         <scene sceneID="M9u-pM-l0L">
             <objects>
-                <viewController automaticallyAdjustsScrollViewInsets="NO" id="YOf-Si-Ox4" sceneMemberID="viewController">
+                <viewController automaticallyAdjustsScrollViewInsets="NO" id="YOf-Si-Ox4" customClass="CGAssetViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="dV1-KR-Upu"/>
                         <viewControllerLayoutGuide type="bottom" id="mQC-Lg-95Z"/>
                     </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="aCv-WU-xgd">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kfx-Es-3D9">
-                                <rect key="frame" x="0.0" y="64" width="600" height="536"/>
-                            </imageView>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1mL-wu-lxK">
+                                <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kfx-Es-3D9">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="505"/>
+                                        <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                    </imageView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="kfx-Es-3D9" firstAttribute="centerX" secondItem="1mL-wu-lxK" secondAttribute="centerX" id="BHt-LP-8zy"/>
+                                    <constraint firstItem="kfx-Es-3D9" firstAttribute="leading" secondItem="1mL-wu-lxK" secondAttribute="leading" id="fWd-Tj-7cF"/>
+                                    <constraint firstAttribute="trailing" secondItem="kfx-Es-3D9" secondAttribute="trailing" id="izQ-vf-i7K"/>
+                                    <constraint firstAttribute="bottom" secondItem="kfx-Es-3D9" secondAttribute="bottom" id="rgw-6R-unE"/>
+                                    <constraint firstItem="kfx-Es-3D9" firstAttribute="centerY" secondItem="1mL-wu-lxK" secondAttribute="centerY" id="weV-Sz-ZwS"/>
+                                    <constraint firstItem="kfx-Es-3D9" firstAttribute="top" secondItem="1mL-wu-lxK" secondAttribute="top" id="x0z-IY-ROF"/>
+                                </constraints>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="mQC-Lg-95Z" firstAttribute="top" secondItem="1mL-wu-lxK" secondAttribute="bottom" id="0gP-V5-hEm"/>
+                            <constraint firstAttribute="trailing" secondItem="1mL-wu-lxK" secondAttribute="trailing" id="csT-sA-8To"/>
+                            <constraint firstItem="1mL-wu-lxK" firstAttribute="leading" secondItem="aCv-WU-xgd" secondAttribute="leading" id="jz9-LG-F8O"/>
+                            <constraint firstItem="1mL-wu-lxK" firstAttribute="top" secondItem="dV1-KR-Upu" secondAttribute="bottom" id="tZj-tZ-tH0"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="imageView" destination="kfx-Es-3D9" id="xsr-bw-9Vl"/>
+                        <outlet property="scrollView" destination="1mL-wu-lxK" id="3WK-ex-x8C"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Msw-CJ-cgq" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1997" y="460"/>
+            <point key="canvasLocation" x="1557" y="453"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="gfR-UU-l0e">
             <objects>
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="KHE-4t-PNf" sceneMemberID="viewController">
                     <toolbarItems/>
+                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="xc2-JR-FFm">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -118,7 +152,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Df1-HO-YQO" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="728" y="460"/>
+            <point key="canvasLocation" x="820" y="453"/>
         </scene>
     </scenes>
 </document>
