--- a/CustomGallery-iOS/Base.lproj/Main.storyboard
+++ b/CustomGallery-iOS/Base.lproj/Main.storyboard
@@ -123,21 +123,22 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1mL-wu-lxK">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1mL-wu-lxK">
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                                 <subviews>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kfx-Es-3D9">
+                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kfx-Es-3D9">
                                         <rect key="frame" x="0.0" y="0.0" width="320" height="505"/>
                                         <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
                                     </imageView>
                                 </subviews>
+                                <gestureRecognizers/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="kfx-Es-3D9" secondAttribute="bottom" constant="-1" id="0t1-uS-osQ"/>
                                     <constraint firstItem="kfx-Es-3D9" firstAttribute="centerX" secondItem="1mL-wu-lxK" secondAttribute="centerX" id="BHt-LP-8zy"/>
-                                    <constraint firstItem="kfx-Es-3D9" firstAttribute="leading" secondItem="1mL-wu-lxK" secondAttribute="leading" id="fWd-Tj-7cF"/>
-                                    <constraint firstAttribute="trailing" secondItem="kfx-Es-3D9" secondAttribute="trailing" id="izQ-vf-i7K"/>
-                                    <constraint firstAttribute="bottom" secondItem="kfx-Es-3D9" secondAttribute="bottom" id="rgw-6R-unE"/>
+                                    <constraint firstItem="kfx-Es-3D9" firstAttribute="leading" secondItem="1mL-wu-lxK" secondAttribute="leading" id="aPg-Lt-zeu"/>
+                                    <constraint firstAttribute="trailing" secondItem="kfx-Es-3D9" secondAttribute="trailing" id="j2X-PC-qBx"/>
                                     <constraint firstItem="kfx-Es-3D9" firstAttribute="centerY" secondItem="1mL-wu-lxK" secondAttribute="centerY" id="weV-Sz-ZwS"/>
-                                    <constraint firstItem="kfx-Es-3D9" firstAttribute="top" secondItem="1mL-wu-lxK" secondAttribute="top" id="x0z-IY-ROF"/>
+                                    <constraint firstItem="kfx-Es-3D9" firstAttribute="top" secondItem="1mL-wu-lxK" secondAttribute="top" id="yTL-mV-BIV"/>
                                 </constraints>
                                 <connections>
                                     <outlet property="delegate" destination="YOf-Si-Ox4" id="0gJ-at-BqI"/>
@@ -145,6 +146,7 @@
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <gestureRecognizers/>
                         <constraints>
                             <constraint firstItem="mQC-Lg-95Z" firstAttribute="top" secondItem="1mL-wu-lxK" secondAttribute="bottom" id="0gP-V5-hEm"/>
                             <constraint firstAttribute="trailing" secondItem="1mL-wu-lxK" secondAttribute="trailing" id="csT-sA-8To"/>
@@ -158,6 +160,11 @@
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Msw-CJ-cgq" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <pinchGestureRecognizer id="5Kq-Fy-eKT">
+                    <connections>
+                        <action selector="pinchDinch:" destination="YOf-Si-Ox4" id="HkJ-So-OjL"/>
+                    </connections>
+                </pinchGestureRecognizer>
             </objects>
             <point key="canvasLocation" x="1557" y="453"/>
         </scene>
