--- a/CustomGallery-iOS/Base.lproj/Main.storyboard
+++ b/CustomGallery-iOS/Base.lproj/Main.storyboard
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9532" systemVersion="15D21" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="KHE-4t-PNf">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10116" systemVersion="15E65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="KHE-4t-PNf">
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9530"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
         <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
@@ -125,21 +125,7 @@
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" maximumZoomScale="5" bouncesZoom="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1mL-wu-lxK">
                                 <rect key="frame" x="0.0" y="64" width="320" height="504"/>
-                                <subviews>
-                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="kfx-Es-3D9">
-                                        <rect key="frame" x="0.0" y="0.0" width="320" height="504"/>
-                                        <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
-                                    </imageView>
-                                </subviews>
                                 <gestureRecognizers/>
-                                <constraints>
-                                    <constraint firstAttribute="trailing" secondItem="kfx-Es-3D9" secondAttribute="trailing" id="70z-tv-YZP"/>
-                                    <constraint firstItem="kfx-Es-3D9" firstAttribute="centerY" secondItem="1mL-wu-lxK" secondAttribute="centerY" id="Ndb-EC-K9E"/>
-                                    <constraint firstItem="kfx-Es-3D9" firstAttribute="top" secondItem="1mL-wu-lxK" secondAttribute="top" id="cOp-TC-IBW"/>
-                                    <constraint firstItem="kfx-Es-3D9" firstAttribute="centerX" secondItem="1mL-wu-lxK" secondAttribute="centerX" id="hIv-pc-rjH"/>
-                                    <constraint firstItem="kfx-Es-3D9" firstAttribute="leading" secondItem="1mL-wu-lxK" secondAttribute="leading" id="kxg-4y-NyH"/>
-                                    <constraint firstAttribute="bottom" secondItem="kfx-Es-3D9" secondAttribute="bottom" id="oVh-4b-wTl"/>
-                                </constraints>
                                 <connections>
                                     <outlet property="delegate" destination="YOf-Si-Ox4" id="0gJ-at-BqI"/>
                                 </connections>
@@ -155,7 +141,6 @@
                         </constraints>
                     </view>
                     <connections>
-                        <outlet property="imageView" destination="kfx-Es-3D9" id="xsr-bw-9Vl"/>
                         <outlet property="scrollView" destination="1mL-wu-lxK" id="3WK-ex-x8C"/>
                     </connections>
                 </viewController>
