refactore(remove trash);

--- a/CustomGallery-iOS/Base.lproj/Main.storyboard
+++ b/CustomGallery-iOS/Base.lproj/Main.storyboard
@@ -3,8 +3,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--My Photos-->
@@ -48,17 +46,15 @@
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="av7-Yb-cyB">
                                                     <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
-                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                                    <constraints>
-                                                        <constraint firstAttribute="width" secondItem="av7-Yb-cyB" secondAttribute="height" multiplier="1:1" id="xjW-QW-Jr6"/>
-                                                    </constraints>
+                                                    <color key="backgroundColor" red="0.7668833892617436" green="0.88464765100671117" blue="0.90763947147651003" alpha="1" colorSpace="calibratedRGB"/>
                                                 </imageView>
                                             </subviews>
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         </view>
                                         <constraints>
+                                            <constraint firstAttribute="trailing" secondItem="av7-Yb-cyB" secondAttribute="trailing" id="RIJ-gL-VjG"/>
                                             <constraint firstItem="av7-Yb-cyB" firstAttribute="top" secondItem="0dN-HE-fF5" secondAttribute="top" id="aBk-Cn-TjU"/>
-                                            <constraint firstAttribute="bottomMargin" secondItem="av7-Yb-cyB" secondAttribute="bottom" constant="-8" id="ka8-Rf-bMI"/>
+                                            <constraint firstAttribute="bottom" secondItem="av7-Yb-cyB" secondAttribute="bottom" id="ka8-Rf-bMI"/>
                                             <constraint firstItem="av7-Yb-cyB" firstAttribute="leading" secondItem="0dN-HE-fF5" secondAttribute="leading" id="neO-cJ-8nU"/>
                                         </constraints>
                                         <connections>
